Fix Windows 11 button hover visibility

--- a/styles/title-bar.less
+++ b/styles/title-bar.less
@@ -38,6 +38,8 @@
   --title-bar-transition-slow: 0.15s;
 
   // Windows 11 theme colors
+  --title-bar-win11-button-hover-bg: rgba(0, 0, 0, 0.08);
+  --title-bar-win11-button-active-bg: rgba(0, 0, 0, 0.05);
   --title-bar-close-hover-bg: #c42b1c;
   --title-bar-close-hover-color: #fff;
 
@@ -704,6 +706,19 @@ body.is-blurred {
       &:nth-last-child(6) { transition-delay: @label-delay * 5; }
       &:nth-last-child(7) { transition-delay: @label-delay * 6; }
       &:nth-last-child(8) { transition-delay: @label-delay * 7; }
+    }
+  }
+}
+
+/** Windows 11 style */
+.title-bar.theme-windows-11 {
+  .window-buttons button:not(.btn-close) {
+    &:hover {
+      background-color: var(--title-bar-win11-button-hover-bg);
+    }
+
+    &:active {
+      background-color: var(--title-bar-win11-button-active-bg);
     }
   }
 }
